--- a/css/index.css
+++ b/css/index.css
@@ -43,10 +43,15 @@ body {
     height: 50px;
     justify-content: center;
 }
+.btn button:hover {
+    color: #000;
+    background-color: #ddd;
+    border: 2px solid #000;
+}
 .conexion{
-    position: absolute;
-    top: 377px;
-    left: 810px;
+    position:fixed;
+    top: 59.3%;
+    left: 59%;
     transform: translate(-50%, -50%);
     z-index: 1;
     width: 180px;
